# microtype-macro

./: Cargo.toml
src/: lib.rs  model.rs  parse.rs
src/codegen/: diesel.rs  mod.rs  normal.rs  secret.rs  special_attrs.rs
tests/ui/pass/: normal.rs  normal_with_attrs.rs  out_secret.rs  secret.rs
