[package]
name = "microtype-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true


[dependencies]
microtype-core = "0.1.4"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
